syntax = "proto3";
package irismod.htlc;

import "gogoproto/gogo.proto";
import "irismod/htlc/htlc.proto";
import "google/protobuf/timestamp.proto";

option go_package = "mods.irisnet.org/modules/htlc/types";

// GenesisState defines the HTLC module's genesis state
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated HTLC htlcs = 2 [ (gogoproto.nullable) = false ];
  repeated AssetSupply supplies = 3 [ (gogoproto.nullable) = false ];
  google.protobuf.Timestamp previous_block_time = 4
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
}